--- a/scripts/india_map.ipynb
+++ b/scripts/india_map.ipynb
@@ -296,8 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The actual mask files are made with a different script, writen in [NCL](http://www.ncl.ucar.edu/)\n",
-    "The code here modifies the generic script based on what region we're interested in at the moment. \n",
+    "The actual mask files are made with a different [script](maskregions_India.ncl), writen in [NCL](http://www.ncl.ucar.edu/) The code here modifies the generic script based on what region we're interested in at the moment. \n",
     "\n",
     "For some countries, e.g., Chile, the region labels in the shapefiles and the region labels in the heatwave database are not rendered the same (typically this has to do with how accented letters are notated), so some tweaking has to be done."
    ]
